--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Lucas Speziale</title>
   </head>
-  <body class="bg-gray-950 font-sans">
+  <body class="bg-gray-950">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
